[package]
name = "rust-reveal"
version = "0.1.0"
authors = ["SpiralP <spiral.palmer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
widestring = "0.4.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.8", features = ["winnt", "shtypes", "objbase", "winerror"] }
