[package]
name = "reveal"
version = "0.1.0"
authors = ["SpiralP <spiral.palmer@gmail.com>"]
edition = "2018"

[dependencies]
error-chain = "0.12.2"
cfg-if = "0.1.10"

[target.'cfg(windows)'.dependencies]
widestring = "0.4.2"
winapi = { version = "0.3.9", features = ["winnt", "shtypes", "objbase", "winerror"] }
